<resources>
    <string name="app_name">Smart Home Smart Security System</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Living Room</string>
    <string name="third_fragment_label">Room 1</string>
    <string name="forth_fragment_label">Room 2</string>
    <string name="fifth_fragment_label">Kitchen</string>
    <string name="sixth_fragment_label">Outside Light</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="home_view">Home View</string>
    <string name="outside_lights">Outside Lights</string>
    <string name="kitchen">Kitchen</string>
    <string name="room_2">Room 2</string>


    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--    Biometric -->
    <string name="prompt_info_title">SmartHome App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">secret_key_name</string>
</resources>