<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutsignin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="User Login"
        android:textColor="@android:color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="SMART HOME SECURITY SYSTEM"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#26a69a"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/biometricBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/et_custom"
            android:contentDescription="biometricLogin"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_fingerprint_24" />
    </LinearLayout>

</RelativeLayout>